--- a/package.json
+++ b/package.json
@@ -10,5 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ptriv1/note-taker.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ptriv1/note-taker/issues"
+  },
+  "homepage": "https://github.com/ptriv1/note-taker#readme"
 }
